--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -5,15 +5,13 @@
         <h6>{{priceData.name}}</h6>
       </div>
     </div>
-
   <h2 class="title button-left button-right">{{priceData.price}}</h2>
   <div class="buttons" side="right">
     <div class="button button-clear">
-      <h6>{{priceData.chg_percent}}</h6>
+      <h6>{{priceData.chg_percent}}%</h6>
     </div>
   </div>
 </div>
-
 <ion-content class="has-subheader">
   <div class="button-bar">
   <a ng-click="chartViewFunction(1)" ng-class="chartView == 1 ? 'active':' ' " class="button">Day</a>
@@ -25,11 +23,8 @@
 <img ng-if="chartView==1" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=1d&q=l&l=on&z=s&p=m" style="width:100%"/>
 <img ng-if="chartView==2" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=5d&q=l&l=on&z=s&p=m" style="width:100%"/>
 <img ng-if="chartView==3" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=6m&q=l&l=on&z=s&p=m" style="width:100%"/>
-<img ng-if="chartView==4" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=1y&q=l&l=on&z=s&p=m" style="width:100%"/>
+<nvd3 ng-if="chartView==4" options="options" data="data" style="height:70vh; width=100%"></nvd3>
 <img ng-if="chartView==5" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=my&q=l&l=on&z=s&p=m" style="width:100%"/>
-
-
-
   <div class="card">
   <div class="item item-divider">Market Data</div>
     <div class="row row-center">
