--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -1,19 +1,22 @@
-<ion-view view-title={{ticker}}>
-  <div class="bar bar-subheader bar-light">
+<ion-view view-title={{ticker}} drag-content="false">
+  <!-- <ion-nav-bar id="stock-navbar" class="bar-dark ng-style:reactiveColor">
+   <ion-nav-back-button></ion-nav-back-button>
+ </ion-nav-bar> -->
+  <div class="bar bar-subheader bar-light" id="stock-subheader-bar">
     <div class="buttons" side="left">
-      <div class="button button-clear">
-        <h6>{{priceData.name}}</h6>
+      <div class="button button-clear display-flex">
+        <h6 id="stock-name">{{priceData.name}}</h6>
       </div>
     </div>
-  <h2 class="title button-left button-right">{{priceData.price}}</h2>
+  <h2 class="title button-left button-right" id="stock-price">{{priceData.price}}</h2>
   <div class="buttons" side="right">
     <div class="button button-clear">
-      <h6>{{priceData.chg_percent}}%</h6>
+      <h6 id="stock-change" ng-class="priceData.change<0 ? 'assertive':'balanced'" >{{priceData.chg_percent}}%</h6>
     </div>
   </div>
 </div>
-<ion-content class="has-subheader">
-  <div class="button-bar">
+<ion-content class="has-subheader" scrollbar-y= "false">
+  <div class="button-bar" id="short-button-bar">
   <a ng-click="chartViewFunction(1)" ng-class="chartView == 1 ? 'active':' ' " class="button">Day</a>
   <a ng-click="chartViewFunction(2)" ng-class="chartView == 2 ? 'active':' ' " class="button">Week</a>
   <a ng-click="chartViewFunction(3)" ng-class="chartView == 3 ? 'active':' ' " class="button">6months</a>
@@ -23,37 +26,37 @@
 <img ng-if="chartView==1" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=1d&q=l&l=on&z=s&p=m" style="width:100%"/>
 <img ng-if="chartView==2" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=5d&q=l&l=on&z=s&p=m" style="width:100%"/>
 <img ng-if="chartView==3" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=6m&q=l&l=on&z=s&p=m" style="width:100%"/>
-<nvd3 ng-if="chartView==4" options="options" data="data" style="height:70vh; width=100%"></nvd3>
+<nvd3 ng-if="chartView==4" options="options" data="data" id="interactiveChart"></nvd3>
 <img ng-if="chartView==5" ng-src="http://chart.finance.yahoo.com/z?s={{ticker}}&t=my&q=l&l=on&z=s&p=m" style="width:100%"/>
   <div class="card">
   <div class="item item-divider">Market Data</div>
     <div class="row row-center">
         <div class="col">Day High</div>
-        <div class="col">{{priceData.day_high}}</div>
+        <div class="col col-30">{{priceData.day_high}}</div>
         <div class="col">Day Low</div>
-        <div class="col">{{priceData.day_low}}</div>
+        <div class="col col-30">{{priceData.day_low}}</div>
     </div>
     <div class="row row-center">
         <div class="col">Year High</div>
-        <div class="col">{{priceData.year_high}}</div>
+        <div class="col col-30">{{priceData.year_high}}</div>
         <div class="col">Year Low</div>
-        <div class="col">{{priceData.year_low}}</div>
+        <div class="col col-30">{{priceData.year_low}}</div>
     </div>
     <div class="row row-center">
         <div class="col">Previous Close</div>
-        <div class="col">{{detailsData.PreviousClose}}</div>
+        <div class="col col-30">{{detailsData.PreviousClose}}</div>
         <div class="col">Volume</div>
-        <div class="col">{{detailsData.Volume}}</div>
+        <div class="col col-30">{{detailsData.Volume}}</div>
     </div>
     <div class="row row-center">
         <div class="col">50 days Avg</div>
-        <div class="col">{{detailsData.FiftydayMovingAverage}}</div>
+        <div class="col col-30">{{detailsData.FiftydayMovingAverage}}</div>
         <div class="col">50 days Percentage change</div>
-        <div class="col">{{detailsData.PercentChangeFromFiftydayMovingAverage}}</div>
+        <div class="col col-30">{{detailsData.PercentChangeFromFiftydayMovingAverage}}</div>
     </div>
   </div>
   <div class="card">
-    <div class="item item-divider">Notes</div>
+    <div class="item item-divider">Notes <span ng-click="addnote()"> Add </span></div>
       <a class="item">
         <h2>Note</h2>
       </a>
