--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,6 +22,12 @@
           My Stocks
         </ion-item>
         <ion-item menu-close ng-click="login()">
+          SignUp
+        </ion-item>
+        <ion-item menu-close ng-click="login()">
+          Search
+        </ion-item>
+        <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
       </ion-list>
